// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web component: Checkbox should have right properties 1`] = `
LoadedCheerio {
  "0": <div
    class="checkbox class-name"
    style="color: red;"
  >
    <div
      class="wrapper"
    >
      <div
        class="input checked"
        style="border-color: red; background-color: red;"
      >
        <input
          class="inner"
          type="checkbox"
          value="apple"
        />
      </div>
      hello
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`web component: Checkbox should render correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="checkbox"
  >
    <div
      class="wrapper"
    >
      <div
        class="input "
        style="border-color: #f85959;"
      >
        <input
          class="inner"
          type="checkbox"
          value=""
        />
      </div>
      Hello world
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
